--- a/src/router/login/loginform.css
+++ b/src/router/login/loginform.css
@@ -1,51 +1,8 @@
-.container{
-    margin-top: 200px;
-    margin-bottom: 150px; 
-    background-color: #ffff;
-    
+*{
+    overflow-x: hidden;
 }
 
-.main-title {
-  font-size: 50px;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 500;
-}
-span {
-  color: #6dd65f;
-}
+.ant-btn{
+    height:100%;
 
-.input-email, .input-password{
-    border: solid #6C6A6A 0.5px ;
-    border-radius: 10px;
-    width: 350px;
-    height: 55px;
-}
-
-Input::placeholder{
-    padding-left: 10px;
-    
-}
-
-.loginform-cover{
-   padding-top: 80px;
-
-}
-
-.wrap-email-input{
-    margin-top: 10px;
-}
-
-.wrap-btn-login{
-    margin-top: 20px;
-}
-
-.btn-login{
-    border: none;
-    border-radius: 10px;
-    color: white;
-    width: 350px;
-    height: 55px;
-    background-color: #5EC401;
-    font-family: "Source Sans Pro", sans-serif;
-    
 }
