--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -5,7 +6,7 @@
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background: #e6f8ec;    
+    background: #e6f8ec;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
