Khoi commit Changed pass + Noti + Salary

--- a/src/router/password/passwordStyle.css
+++ b/src/router/password/passwordStyle.css
@@ -16,8 +16,9 @@
 .title{
     width: 95%;
     text-align: left;
-    padding: 20px;
-    border-bottom: black solid 1px;
+    padding-left: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     color: green;
 }
 
