--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,13 @@ button:focus-visible {
         background-color: #f9f9f9;
     }
 }
+body::-webkit-scrollbar-track {
+    background-color: #fafafa;
+}
+body::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(-45deg, #3edf7c, #2eb161);
+    border-radius: 50px;
+}
+body::-webkit-scrollbar {
+    width: 10px;
+}
